--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "expo": "^23.0.4",
+    "moment": "^2.20.1",
     "react": "16.0.0",
     "react-native": "0.50.3",
     "react-navigation": "^1.0.0-beta.22"
